# Rust-actix-school-management

./: Cargo.toml  README.md
src/: db.rs  error.rs  main.rs
src copy/: main.rs  models.rs
src copy/db/: database.rs  student_data_trait.rs
src copy/models/: students.rs
src/db/: database.rs  student_data_trait.rs
src/error/: student_error.rs
src/models/: students.rs
