[package]
name = "school_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.77"
cargo-watch = "8.5.2"
derive_more = "0.99.17"
json = "0.12.4"
serde = {version = "1.0.197", features = ["derive"]}
surrealdb = "1.2.2"
uuid = "1.7.0"
validator = {version="0.16.1", features=["derive"]}
